--- a/ICMLPhysicsWorkshop/icml_prl.tex
+++ b/ICMLPhysicsWorkshop/icml_prl.tex
@@ -24,6 +24,8 @@
 \usepackage{amssymb}
 \usepackage{enumitem}
 \setlist[itemize,1]{leftmargin=*,wide=0em, noitemsep,nolistsep}
+\newcommand {\red}[1]{{\color{red}\sf{[#1]}}}
+
 \newcommand {\michael}[1]{{\color{red}\sf{[michael: #1]}}}
 \newcommand {\charles}[1]{{\color{blue}\sf{[charles: #1]}}}
 
