made pass to fix most issues

--- a/ICMLPhysicsWorkshop/dnns.bib
+++ b/ICMLPhysicsWorkshop/dnns.bib
@@ -6,6 +6,9 @@
 @MISC{weightwatcher_package_justURL,
   note =         {\texttt{https://pypi.org/project/WeightWatcher/}},
 }
+@MISC{distiller_repo,
+  note =         {\texttt{https://github.com/NervanaSystems/distiller}},
+}
 
 @TECHREPORT{AS17emergence_TR,
   author =    {A. Achille and S. Soatto},
@@ -1070,6 +1073,13 @@
   year =      {2018},
 }
 
+@TECHREPORT{CWZZ17_TR,
+  author =    {Y. Cheng and D. Wang and P. Zhou and T. Zhang},
+  title =     {A Survey of Model Compression and Acceleration for Deep Neural Networks},
+  number =    {Preprint: arXiv:1710.09282},
+  year =      {2017},
+}
+
 @TECHREPORT{CTWG16_TR,
   author =    {S. Cherla and S. N. Tran and T. Weyde and A. d'Avila Garcez},
   title =     {Generalizing the Discriminative Restricted {B}oltzmann Machine},
@@ -1545,6 +1555,16 @@
   title =     {A Capacity Scaling Law for Artificial Neural Networks},
   number =    {Preprint: arXiv: 1708.06019},
   year =      {2017},
+}
+
+@ARTICLE{FIBX12,
+  author =       {N. Friedman and S. Ito and B. A. W. Brinkman and M. Shimono and R. E. L. DeVille and K. A. Dahmen and J. M. Beggs and T. C. Butler},
+  title =        {Universal Critical Dynamics in High Resolution Neuronal Avalanche Data},
+  journal =      {Phys. Rev. Lett.},
+  year =         {2012},
+  volume =       {108},
+  number =       {20},
+  pages =        {208102},
 }
 
 @ARTICLE{Fu02,
