--- a/ICMLPhysicsWorkshop/prl_body.tex
+++ b/ICMLPhysicsWorkshop/prl_body.tex
@@ -2,21 +2,26 @@
 %\section{Letter}
 \paragraph{Introduction.}
 %\label{sxn:body}
-%\vspace{-1mm}
 
 Recent work by Martin and Mahoney~\cite{MM18_TR,MM19_HTSR_ICML} has developed a new Theory of Implicit Heavy-Tailed Self-Regularization (HT-SR) for Deep Neural Networks (DNNs). 
-Among other things, this theory provides a Universal empirical metric that characterizes the amount of \emph{Implicit Self-Regularization}---and, accordingly, the generalization capacity---for a wide range of publicly-available, best-in-class, pre-trained DNNs, including AlexNet, VGG, ResNet, \charles{including over 100 pre-trained models.}
+Among other things, this theory provides a Universal empirical metric that characterizes the amount of \emph{Implicit Self-Regularization}---and, accordingly, the generalization capacity---for a wide range of publicly-available, best-in-class, pre-trained DNNs, including AlexNet, VGG, ResNet, 
+and over 100 other models.
+%\charles{including over 100 pre-trained models.}
 
-In more detail, they study the Empirical Spectral Density (ESD), $\rho(\lambda)$, of individual layer weight matrices, $\mathbf{W}$, as well as of convolutional feature maps, through the lens of Random Matrix Theory (RMT); and they observe that the individual layer ESDs almost always follow a \red{(truncated)} power law (PL) distribution
+In more detail, they study the Empirical Spectral Density (ESD), $\rho(\lambda)$, of individual layer weight matrices, $\mathbf{W}$, as well as of convolutional feature maps, through the lens of Random Matrix Theory (RMT); and they observe that the individual layer ESDs almost always follow a (truncated) power law (PL) distribution
+\vspace{-2mm}
 \begin{equation}
 \rho(\lambda)\sim\lambda^{-\alpha},\;\;\lambda\le\lambda_{max},
 \label{eqn:eigenval_pl}
+\vspace{-1mm}
 \end{equation}
 where $\rho(\lambda)$ is the density of the eigenvalues $\lambda$ of the normalized layer correlation matrix 
+\vspace{-2mm}
 \begin{equation}
  \mathbf{X} = \frac{1}{N}\mathbf{W}^{T}\mathbf{W},
+\vspace{-1mm}
 \end{equation}
-\red{and $\lambda_{max}$ is the maximum eigenvalue observed.}
+and $\lambda_{max}$ is the maximum eigenvalue observed.
 The PL exponents nearly all lie within a universal range $\alpha\in[2,5]$, in nearly every pre-trained production-quality architecture considered.
 See Figure~\ref{fig:alphas}.
 
@@ -31,8 +36,9 @@ See Figure~\ref{fig:alphas}.
       \includegraphics[scale=0.20]{img/Top5AvgAlpha.png}
       \label{fig:alphaTop5}
    }
+   \vspace{-5mm}
    \caption{Histogram of PL exponents, and scatter plot of average ${\alpha}$ vs Top5 error, for nearly $10,000$ layer weight matrices (and 2D feature maps) from pre-trained DNNs, trained on ImageNet.
-   \charles{Isn't this described in the text?}
+   % MM: Yes, not many details, but enough for four pages.  %\charles{Isn't this described in the text?}
    }
    \label{fig:alphas}
 \end{figure}
@@ -44,22 +50,24 @@ Moreover, smaller values of $\alpha$ correlate well with better generalization a
 In Statistical Physics, Universality of PL exponents is very special, and it suggests the presence of a deeper, underlying, \emph{Universal mechanism} driving the system dynamics~\cite{SornetteBook,BouchaudPotters03}.
 It is this \emph{Heavy Tailed Mechanistic Universality} (HT-MU), as well call it, that originally motivated our study.  
 
-HT-MU applies to the analysis of complicated systems, including many physical systems~\cite{SornetteBook}, traditional NNs~\cite{EB01_BOOK,nishimori01}, and even models of the dynamics of actual spiking neurons~\cite{XXX-SOME-NEURAL-SPIKE-PAPER}.
-\michael{CHARELS: What is best ref here.} \charles{There are dozens, dating back decades:  A good, semi-recent Phys Rev ref is:  Friedman, N. et al. Universal critical dynamics in high resolution neuronal avalanche data. Physical Review Letters 108, 208102 (2012). }
+HT-MU applies to the analysis of complicated systems, including many physical systems~\cite{SornetteBook}, traditional NNs~\cite{EB01_BOOK,nishimori01}, and even models of the dynamics of actual spiking neurons~\cite{FIBX12}.
 Indeed, the dynamics of learning in DNNs, and perhaps real neurons as well, seems to resemble a system near a phase transition, e.g., the phase boundary of spin glass, a system displaying Self Organized Criticality (SOC), or a Jamming transition~\cite{GSdx18_TR,SGd18_TR}. 
 Of course, we can not say which mechanism, if any, is at play. 
 Instead, we use the machinery of  HT-RMT as a stand-in for a generative model of the weight matrices in DNNs, and we use this to catalog and model the HT behavior of DNNs.%
 
 Based on these ideas, we develop here a Universal capacity control metric, $\hat{\alpha}$.
 This metric is a weighted average of the layer PL exponents, $\alpha_{l}$, of the DNN layer weight matrices,
+\vspace{-2mm}
 \begin{equation}
 \hat{\alpha}=\sum_{l\in L}\alpha_{l}\log\lambda_{l}^{max}  ,
 \label{eqn:alpha_hat_specific}
+\vspace{-1mm}
 \end{equation}
 where $L$ indexes layers, and 
 %where 
 $\lambda_{l}^{max}$ is the maximum eigenvalue (i.e., Spectral norm) of layer correlation matrices~$\mathbf{W}_{l}$. 
 
+\vspace{-2mm}
 \paragraph{Approach.} 
 Our approach and intent differ from other theoretical studies in the DNN literature, although we can relate our results back to known results.
 Most recently, e.g., Liao et al.~\cite{LMBx18_TR} used an appropriately-scaled, data-dependent Product Norm capacity control metric to bound worst-case generalization error for several small (not production-quality, but still interesting) DNN models, and they showed that the bounds are remarkably tight.
@@ -69,12 +77,16 @@ These studies seek \emph{worst-case} complexity bounds, motivated in some cases 
 This approach contrasts with that of Martin and Mahoney~\cite{MM18_TR,MM19_HTSR_ICML}, who looked at empirical properties of a wide range of state-of-the-art models, and from this developed a metric that provides \emph{a posteriori} characterization of implicit regularization for typical-case DNNs.  
 Thus, instead of using statistical learning theory principles to propose a metric that provides worst-case \emph{a priori} bounds, we seek here an \emph{average-case} or \emph{typical case} (where ``typical'' is for current state-of-the-art publicly-available pre-trained DNN models) complexity metric, viable in production settings as a guide to the development of better DNNs at scale.
 
+\vspace{-2mm}
 \paragraph{Theory.} 
 Let us write the Energy Landscape (or optimization function) for a typical DNN with $L$ layers, with activation functions $h_{l}(\cdot)$, and with weight matrices and 
-biases $\mathbf{W}_{l}$ and $\mathbf{b}_{l}$, as follows: \charles{Can we get rid of this extra space ?}
+biases $\mathbf{W}_{l}$ and $\mathbf{b}_{l}$, as follows: 
+%\charles{Can we get rid of this extra space ?}
+\vspace{-2mm}
 \begin{equation}
 E=h_{L}(\mathbf{W}_{L}\times h_{L-1}(\mathbf{W}_{L-1}\times(\cdots)+\mathbf{b}_{L-1})+\mathbf{b}_{L})  .
 \label{eqn:dnn_energy}
+\vspace{-1mm}
 \end{equation}
 
 Typically, this model would be trained on some labeled data $\{d_{i},y_{i}\}\in\mathcal{D}$, using Backprop~\cite{LBOM12_tricks}, by minimizing the loss $\mathcal{L}=\sum_{i\in\mathcal{D}}[E(d_{i})-y_{i}]$.
@@ -84,32 +96,38 @@ For simplicity, we do not indicate the structural details of the layers (e.g., D
 Each layer is defined by one or more layer 2D weight matrices $\mathbf{W}_{l}$, and/or the 2D feature maps $\mathbf{W}_{l,i}$ extracted directly from 2D Convolutional (Conv2D) layers.
 (We have not yet analyzed LSTM or other complex Layers.)   A typical modern DNN may have anywhere between 5 and 5000 2D layer matrices / feature maps.
 
-We can relate our universality metric to the more traditional, data dependent,  Product Norm capacity metrics $\mathcal{C}$, defined as
+We can relate our universality metric to the more traditional, data dependent, Product Norm capacity metric, $\mathcal{C}$, defined~as
+\vspace{-2mm}
 \begin{equation}
 \mathcal{C}\sim\Vert\mathbf{W}_{1}\Vert\times\Vert\mathbf{W}_{2}\Vert\cdots\Vert\mathbf{W}_{L}\Vert   .
+\vspace{-1mm}
 \end{equation}
 Using a standard trick from field theory, we consider the log Product Norm, which takes the form of an average log norm
+\vspace{-2mm}
 \begin{eqnarray*}
 \log\mathcal{C} &\sim& \log\bigg[\Vert\mathbf{W}_{1}\Vert\times\Vert\mathbf{W}_{2}\Vert\cdots\Vert\mathbf{W}_{L}\Vert\bigg]  \\
                 &\sim& \bigg[\log\Vert\mathbf{W}_{1}\Vert+\log\Vert\mathbf{W}_{2}\Vert\cdots\log\Vert\mathbf{W}_{L}\Vert\bigg]  \\
                 &\sim&  \langle\log\Vert\mathbf{W}\Vert\rangle=\dfrac{1}{N_{L}}\sum_{l}\log\Vert\mathbf{W}_{l}\Vert   .
+\vspace{-1mm}
 \end{eqnarray*}
 
-\charles{Notice that our capacity metric $\hat{\alpha}$ depends 2 parameters, the PL exponent $\alpha$, a measure of matrix sparsity, and nd the maximum eigenvalue $\lambda_{max}$, which
-corrects for the matrix scale. Other capacity metrics either consider just the sparsity with a rank (i.e the Stable Rank), or the scale with a  matrix norm, like the Spectral or the Frobenius norm.}
+Our capacity metric $\hat{\alpha}$ depends two parameters, the PL exponent $\alpha$ (a measure of matrix sparsity) and the maximum eigenvalue $\lambda_{max}$ (which corrects for the matrix scale). 
+Other capacity metrics typically consider either just the sparsity or rank-based sparsity (e.g., the Stable Rank) or just the scale via a matrix norm (e.g., Spectral or Frobenius norm).
 
 When $\Vert\mathbf{W}\Vert$ is the Spectral norm, $\Vert\mathbf{W}\Vert_{2}\sim\lambda_{max}$, then our $\hat{\alpha}$ of Eqn.~(\ref{eqn:alpha_hat_specific}) is a weighted average of the log Spectral norms, where the weights are power law exponents $\alpha$. 
 In this sense, our universal metric $\hat{\alpha}$ behaves like an \emph{average-case} version of what is a worst-case bound, but it is more suitable for applying to large, production-level DNNs.
  
 When $\Vert\mathbf{W}\Vert$ is the Frobenius norm, $\Vert\mathbf{W}\Vert^{2}_{F}$, we can use results of HT RMT to interpret the PL exponents $\alpha$ as a type of Soft or Stable Rank. 
 Specifically, when $\alpha$ is very small, we can relate $\alpha$ to the more familiar Stable Rank $\mathcal{R}^{log}_{s}$, expressed in log-units (and up to the $\frac{1}{N}$ scaling):
+\vspace{-2mm}
 \begin{equation}
 \mathcal{R}^{log}_{s}:=\dfrac{\log\Vert\mathbf{W}\Vert^{2}_{F}}{\log\lambda^{max}}  \approx \alpha  .
+\vspace{-1mm}
 \end{equation}
-Using this, one could implement our capacity metric as a regularizer to improve DNN training by implementing a Stable Rank regularizer (similar to how Spectral norm regularization is implemented~\cite{XXX-XXX-WHAT-IS-BEST-REF}.
-\michael{MICHAEL TO DO: fill in best ref for there.}
+Using this, one could implement our capacity metric as a regularizer to improve DNN training by implementing a Stable Rank regularizer (similar to how Spectral/Frobenius norm regularization is often implemented.  %~\cite{XXX-XXX-WHAT-IS-BEST-REF}.
 
 
+\vspace{-2mm}
 \paragraph{Methodology.} 
 To evaluate our metric, we introduce a new methodology to analyze the performance of large-scale pre-trained DNNs, including the VGG and ResNet series of models, as well nearly 200 other widely available models, and we study how capacity metrics correlate with the reported test accuracies.
  
@@ -126,8 +144,15 @@ To make things more reproducible, we provide a python command tool, \texttt{Weig
  
 We have applied our Universal capacity control metric $\hat{\alpha}$ to a wide range of large-scale pre-trained production-level DNNs.
 %Notice that, 
-For Linear DNN layers, we can simply replace the log Norm with our metric, whereas for Conv2D Layers, we can associate the ``Norm'' of the 4-index Tensor $\mathbf{W}_{l}$ to the sum of the $n_{l}=c\times d$ terms for each feature map, as follows:
+For Linear DNN layers, 
+we 
+%can 
+simply replace the log Norm with our metric, whereas for Conv2D Layers, 
+we 
+%can 
+associate the ``Norm'' of the 4-index Tensor $\mathbf{W}_{l}$ to the sum of the $n_{l}=c\times d$ terms for each feature map, as follows:
 
+\vspace{-2mm}
 \begin{eqnarray*}
 \text{Linear Layer:} & & \log\Vert\mathbf{W}_{l}\Vert
 %\quad 
@@ -139,18 +164,21 @@ For Linear DNN layers, we can simply replace the log Norm with our metric, where
 \rightarrow 
 %\quad 
 \sum_{i=1}^{n_{l}}\alpha_{l,i} \log\lambda_{l,i}^{max} .
+\vspace{-1mm}
 \end{eqnarray*}
 
+\vspace{-2mm}
 \paragraph{Results.} 
 Our Universal metric correlates very well with the reported average test accuracies across many series of pre-trained DNNs.
-See Figures~\ref{fig:bothmodels} and~\ref{fig:alphahats}.
-
-\michael{CHARLES: make a short paragraph of this; need details on figs in captions or text---put in a draft, and then I'll make a pass.}
-\charles{
-We present 2 complex examples of pretrained models with similar architectures of differing depths.  Figure~\ref{fig:vgg_alphahat} presents the VGG series of networks (VGG11, 13, 16, and 19, with an without Batch Normalization (BN), as available in PyTorch), and a large set of ResNet architectures.  Figure~\ref{fig:resnet_alphahat} presents results for several ResNet models,
-ranging from ResNet10 to ResNet152 (available here).  We generate the $\hat{\alpha}$ metric using the weightwatcher tool, (hopefully) making these results trivial to reproduce.
-  Notice, we do not have access to the  (ImageNet) test data, and compare $\hat{\alpha}$ to reported Top1 test errors.  Amazingly, our simple $\hat{\alpha}$ metric correlates very well with the reported Top1 test errors. 
-  }
+See Figures~\ref{fig:bothmodels} and~\ref{fig:alphahats}, where
+In Figure~\ref{fig:bothmodels}, we present two complex examples of pre-trained models with similar architectures of differing depths.  
+Figure~\ref{fig:vgg_alphahat} presents the VGG series of networks (VGG11, 13, 16, and 19, with an without Batch Normalization (BN), as available in PyTorch), and 
+Figure~\ref{fig:resnet_alphahat} presents results for a large set of ResNet architectures, ranging from ResNet10 to ResNet152 (available here). 
+We generate the $\hat{\alpha}$ metric using the \texttt{WeightWatcher} tool~\cite{weightwatcher_package_justURL}, (hopefully) making these results trivial to reproduce.
+Notice, we do not have access to the (ImageNet) test data.
+Compare $\hat{\alpha}$ to reported Top1 test errors. 
+Amazingly, our simple $\hat{\alpha}$ metric correlates very well with the reported Top1 test errors. 
+\michael{CHARLES: Finalize Figure~\ref{fig:alphahats}, and add sentences here and in caption.}
   
 \begin{figure}[H]
    \centering
@@ -163,7 +191,11 @@ ranging from ResNet10 to ResNet152 (available here).  We generate the $\hat{\alp
       \includegraphics[scale=0.12]{img/ResNet-w_alphas.png}
       \label{fig:resnet_alphahat}
    }
-   \caption{Top 1 Test Accuracy versus the Universal, weighted average PL exponent $\hat{\alpha}$ for pre-trained VGG and ResNet Architectures and DNNs.}
+   \vspace{-3mm}
+   \caption{Top 1 Test Accuracy versus 
+            %the Universal, weighted average PL exponent 
+            $\hat{\alpha}$ 
+            for pre-trained VGG and ResNet Architectures and DNNs.}
    \label{fig:bothmodels}
 \end{figure}
 
@@ -173,6 +205,7 @@ ranging from ResNet10 to ResNet152 (available here).  We generate the $\hat{\alp
       \includegraphics[scale=0.20]{img/Top1AlphaHat.png}
       \label{fig:alphahatTop1}
    }
+   \vspace{-3mm}
    \caption{%
     Caption: we have room for 1 more 
     \michael{CHARELS: do we want another subfigure here, maybe scatter plot of some NLP models.}\charles{we do not have NLP data across architectures...still thinking about this}
@@ -189,34 +222,32 @@ Our  results can be reproduced with the \texttt{WeightWatcher} package~\cite{wei
 and our
 results suggest that our ``practical theory'' methodology is fruitful more generally for engineering good algorithms for realistic large-scale DNNs.
 
+\vspace{-2mm}
 \paragraph{Comparison with other metrics.}
-Our Universality metric $\hat{\alpha}$ is related to other, more familiar capacity metrics such as the Spectral Norm, the Frobenius $(L2)$ Norm, and robust measures of matrix rank such as the Stable Rank.
+Our Universality metric $\hat{\alpha}$ can be related to other, more familiar capacity metrics such as the Spectral Norm, the Frobenius Norm, and robust measures of matrix rank such as the Stable Rank.
 This suggests an obvious question: 
-Does the $\hat{\alpha}$ metric ``work'' simply because DNN models have explicit regularization (i.e., with an $(L2)$ or Spectral Norm constraint)?
-More generally, is the $\hat{\alpha}$ metric just a variation of these more familiar \emph{worst case} bounds?  
-\michael{MICHAEL TO DO: we seem to be convolving norms versus exponents with worst-case versus typical-case issues---I'll fix in light of recent discussion.}
+Does the $\hat{\alpha}$ metric ``work'' simply because DNN models have explicit regularization (i.e., with a Frobenius or Spectral Norm constraint)?
+More generally, is the $\hat{\alpha}$ metric just a variation of these more familiar norm-based metrics?  
 
 The short answer is that we believe that HTMU is a new, more fundamental relation. 
 It complements other metrics, but it works more generally on actual DNNs when other norm-based theoretical metrics inspired by worst-case bounds fail. 
-In particular, we can identify counter examples, most notably in compressed DNN models~\cite{XXX-XXX-WHAT-IS-REF}\michael{MICHAEL TO DO: Fill in ref for compressed DNN models here}, where the average Frobenius $(L2)$ Norm increases with decreasing test error, but where the average $\alpha$ decreases, as expected.  
+In particular, we can identify counter examples, most notably in compressed DNN models~\cite{CWZZ17_TR}.
+For compressed models, we have observed that the average Frobenius Norm increases with decreasing test error, whereas the average $\alpha$ decreases, as expected.  
 
 
 %For example, 
 To illustrate this, we consider average metrics measured on ResNet20, trained on CIFAR10, before and after applying the Group Regularization technique, 
-as implemented in the \emph{distiller} package~\cite{XXX-ADDCITE}. 
-\michael{MICHAEL TO DO: Fill in reference for distiller here.}
-\michael{MICHAEL TO DO: why is that in emph rather than texttt.}
+as implemented in the \emph{distiller} package.%~\cite{distiller_repo}. 
+\footnote{For details, see \url{https://nervanasystems.github.io/distiller/\#distiller-documentation} and also \url{https://github.com/NervanaSystems/distiller}.}
 See Figure~\ref{fig:resnet204D5L}.
-\michael{CHARLES: More details here.}
+\michael{CHARLES: More details here, e.g., what are axes, what is green versus red, more description of what figures show, etc.}
 %We compare the pre-trained baseline ($4D\_regularized\_5Lremoved$), with the pre-trained fine-tuned version ($4D\_regularized\_5Lremoved_finetuned$).    
 Notice that the reported baseline test accuracies ($Top1=91.450$ and $Top5=99.750$) 
 are better than the reported fine-tuned test accuracies ($Top1=91.020$ and $Top5=99.670$), so traditional theory suggests that the baseline Spectral Norm
 ($\lambda_{max}\sim\Vert\mathbf{W}\Vert_{2}$) should be \emph{smaller} than those of the layers in the fine-tuned model.
-\michael{CHARELS: Frob norm not shown?  If yes, we can jsut say ``(not shown)'' but I want to check before adding that.}
-\charles{YES}.
 Based on previous empirical results, we may also expect the baseline Frobenius norm to be smaller than the fine tuned. 
 %We observe the reverse for both.
-In both cases, we observe the opposite.
+In both cases (Frobenius norm results not shown), we observe the opposite.
 
 \begin{figure}[H]
    \centering
@@ -229,26 +260,23 @@ In both cases, we observe the opposite.
       \includegraphics[scale=0.14]{img/resnet4d_alphas.png}
       \label{fig:resnet204Dmaxev}
    }
+   \vspace{-3mm}
    \caption{
      ResNet20 with Group Regularization, comparison of layer $\mathbf{W}$ maximum eigenvalue ($\lambda_{max}$, or Spectral Norm *with $1/N$ normalization) and 
      Power Law exponent $\alpha$ pre-trained baseline and fine-tuned models.
-     \michael{CHARLES: better explanation.}
+     \michael{CHARLES: better explanation here and/or text; and is the ``*with'' above a typo.}
            }
    \label{fig:resnet204D5L}
 \end{figure}
 
-\michael{CHARLES: Add a draft of that description; then I'll make a pass and make it a separate paragraph or combine with above par and below par.}
-DESCRIBE THESE 2 FIGURES
-
-
 For the $4D\_regularized$ models, the \emph{distiller} Group Regularization technique has the unusual effect of increasing the norms of the $\mathbf{W}$ feature maps for at least 2 of the Conv2D layers.
-\michael{MICHAEL TO DO: name $4D\_regularized$ not introduced yet.}
-We suspect this effect arises because the Group Regularization  concentrates Frobenius mass from the 5 removed Conv2D layers into these remaining Conv2D layers.
+%\michael{MICHAEL TO DO: name $4D\_regularized$ not introduced yet.}
+We suspect this effect arises because the Group Regularization concentrates Frobenius mass from the five removed Conv2D layers into the remaining Conv2D layers.
 
 Notice while the matrix norms behave atyically, the layers $\alpha$ do not systematically differ between the baseline and fine-tuned models.
-Also (not shown), the average (unweighted) baseline $\alpha$ is indeed smaller than the fine-tuned average
-\michael{CHARLES: what is significance of that last comment.}\charles{--as predicted by our theory of HT-SR}
+Also (not shown), the average (unweighted) baseline $\alpha$ is indeed smaller than the fine-tuned average, as would be predicted by HT-SR Theory.
 
+\vspace{-2mm}
 \paragraph{Discussion.}
 
 We have presented an \emph{unsupervised} capacity control metric which predicts trends in test accuracies of a large-scale pre-trained DNN---without even peeking at the training data or the test data. 
